# multicraft

./: CMakeLists.txt  README.md
assets/shaders/: chunk.frag  chunk.vert  fs.glsl  ray.frag  ray.vert  vs.glsl
src/: main.cpp
src/components/: camera.cpp  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  transform.cpp  transform.h
src/core/: app.cpp  app.h  input.cpp  input.h  resourcemanager.cpp  resourcemanager.h  window.cpp  window.h
src/game/: chunk.cpp  chunk.h  cube.cpp  cube.h  player.cpp  player.h  quad.cpp  quad.h  world.cpp  world.h
src/rendering/: buffer.cpp  buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
